--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,19 @@
-dist: bionic
-language: python
-python:
-  - 3.5
-  - 3.6
-  - 3.7
-  - 3.8
-install:
-  - pip install .[test]
-script:
-  - pytest tests.py --cov sql_remove_comma --cov-report term-missing --cov-branch
-after_script:
-  - if [[ "$TRAVIS_PYTHON_VERSION" == 3.6* ]]; then pip install coveralls; coveralls; fi
+{
+    "dist": "bionic",
+    "language": "python",
+    "python": [
+        3.5,
+        3.6,
+        3.7,
+        3.8
+    ],
+    "install": [
+        "pip install .[test]"
+    ],
+    "script": [
+        "pytest tests.py --cov sql_remove_comma --cov-report term-missing --cov-branch"
+    ],
+    "after_script": [
+        "if [[ \"$TRAVIS_PYTHON_VERSION\" == 3.6* ]]; then pip install coveralls; coveralls; fi"
+    ]
+}
